# MobileNetKI

./: .gitignore  Cargo.toml
src/: maen.ipynb  main.rs
weights/: inspect_safetensors_mobilenetv2.ipynb  main.ipynb  mobilenet_v2_1_0_base_rust_mapped.safetensors  mobilenet_v2_1_0_imagenet_INDEX.csv  proposed_mapping_TIMM_to_RUST.csv  remap_mobilenetv2_to_rust.ipynb
