[package]
name = "mobilenet"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dependencies]
tch = { version = "0.14", features = ["download-libtorch"] }
image = "0.24"
anyhow = "1"
indicatif = "0.17"
rayon = "1.8"
rand = "0.8"
num_cpus = "1.16"
safetensors = "0.4"
bytemuck = "1.14"
half = "2"
